--- a/eyes.ui
+++ b/eyes.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>411</width>
-    <height>237</height>
+    <width>195</width>
+    <height>102</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Eyes</string>
+   <string>Cursor Chaser</string>
   </property>
  </widget>
  <resources/>
