--- a/eyes.qrc
+++ b/eyes.qrc
@@ -1,6 +1,7 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-  <file>eyes_de_DE.qm</file>
-  <file>eyes_en_US.qm</file>
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>eyes_de_DE.qm</file>
+        <file>eyes_en_US.qm</file>
+        <file>eyes_en_CA.qm</file>
+    </qresource>
 </RCC>
